--- a/ModeladoHTML/curso.html
+++ b/ModeladoHTML/curso.html
@@ -162,6 +162,35 @@
         </div>
     </div>
 
+    <!-- FAQ Flotante -->
+    <div class="faq-floating">
+        <button class="faq-button" id="faqToggle">?</button>
+
+        <div class="faq-panel" id="faqPanel">
+            <h3>Preguntas Frecuentes</h3>
+
+            <div class="accordion-item">
+                <button class="accordion-button" data-target="preg1">
+                    ¿Hay certificado?
+                </button>
+                <div class="accordion-content" id="preg1">
+                    <p>Sí, al completar el curso recibirás un <strong>certificado digital oficial</strong> que acredita las 28 horas de formación. Podrás descargarlo inmediatamente y compartirlo en LinkedIn, tu CV o donde prefieras.</p>
+                </div>
+            </div>
+
+            <div class="accordion-item">
+                <button class="accordion-button" data-target="preg2">
+                    ¿Cuánto tiempo dura el acceso?
+                </button>
+                <div class="accordion-content" id="preg2">
+                    <p>El acceso es <strong>de por vida</strong>. Una vez inscrito, podrás volver al curso, revisar videos, materiales y actualizaciones cuando quieras, sin límite de tiempo.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="faq-overlay" id="faqOverlay"></div>
+
     <script>
         function goBack() {
             alert('Volviendo a la lista de cursos...');
@@ -174,15 +203,17 @@
 
         function updateProgress(percent) {
             const circle = document.getElementById('progressCircle');
+            if (!circle) return;
             const text = document.querySelector('.progress-text');
             const circumference = 2 * Math.PI * 65;
             const offset = circumference - (percent / 100 * circumference);
             
             circle.style.strokeDashoffset = offset;
-            text.textContent = percent + '%';
+            if (text) text.textContent = percent + '%';
             
-            if (percent > 0) {
-                document.querySelector('.cta-button').textContent = 'Continuar Curso →';
+            const btn = document.querySelector('.cta-button');
+            if (btn && percent > 0) {
+                btn.textContent = 'Continuar Curso →';
             }
         }
 
@@ -190,8 +221,43 @@
             module.style.backgroundColor = module.style.backgroundColor === 'rgb(237, 242, 247)' ? 'white' : '#edf2f7';
         }
 
-        window.addEventListener('load', () => {
+        document.addEventListener('DOMContentLoaded', function () {
             updateProgress(0);
+
+            const faqToggle = document.getElementById('faqToggle');
+            const faqPanel = document.getElementById('faqPanel');
+            const faqOverlay = document.getElementById('faqOverlay');
+
+            if (!faqToggle || !faqPanel || !faqOverlay) return;
+
+            faqToggle.onclick = function (e) {
+                e.stopPropagation();
+                faqPanel.classList.toggle('open');
+                faqOverlay.classList.toggle('open');
+            };
+
+            faqOverlay.onclick = function () {
+                faqPanel.classList.remove('open');
+                faqOverlay.classList.remove('open');
+            };
+
+            document.onclick = function (e) {
+                if (!faqPanel.contains(e.target) && e.target !== faqToggle) {
+                    faqPanel.classList.remove('open');
+                    faqOverlay.classList.remove('open');
+                }
+            };
+
+            document.querySelectorAll('.accordion-button').forEach(btn => {
+                btn.onclick = function (e) {
+                    e.stopPropagation();
+                    const target = document.getElementById(this.dataset.target);
+                    if (target) {
+                        target.classList.toggle('open');
+                        this.classList.toggle('active');
+                    }
+                };
+            });
         });
     </script>
 </body>
