agrego un div de descargables

--- a/ModeladoHTML/admin_course_config.html
+++ b/ModeladoHTML/admin_course_config.html
@@ -841,6 +841,10 @@
                     <span class="nav-icon">📊</span>
                     <span>Estadísticas</span>
                 </div>
+                 <div class="nav-item" onclick="switchSection(this, 'downloads')">
+                    <span class="nav-icon">📥</span>
+                    <span>Descargables</span>
+                </div>
             </nav>
 
             <div class="main-config">
